--- a/src/components/projects/projects.module.css
+++ b/src/components/projects/projects.module.css
@@ -18,7 +18,7 @@
 }
 .project img {
     object-fit: cover;
-    border-radius: 28px;
+    border-radius: 24px;
     float: right;
     transition: all 500ms;
     box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.3);
@@ -26,6 +26,9 @@
 .project img:hover {
     transform: translateY(-20px);
     box-shadow: 0px 36px 15px 1px rgba(0, 0, 0, 0.4);
+}
+.project a {
+    height: fit-content;
 }
 .project {
     color: var(--night-blue);
