--- a/src/components/projects/projects.module.css
+++ b/src/components/projects/projects.module.css
@@ -27,7 +27,7 @@
     transform: translateY(-20px);
     box-shadow: 0px 36px 15px 1px rgba(0, 0, 0, 0.4);
 }
-.project a {
+.project .img_link {
     height: fit-content;
 }
 .project {
@@ -38,6 +38,11 @@
     letter-spacing: 1.6px;
     text-transform: uppercase;
     margin: 0;
+}
+.project .unfinished_note {
+    color: var(--red);
+    background: var(--night-blue);
+    padding: 10px 12px;
 }
 .project h3 {
     font-size: 4rem;
